# myAD

./: CMakeLists.txt  README.md  myAD.pc.in
include/Forward/: Var.hpp  Var.tpp
include/Reverse/: Var.hpp  Var.tpp  VarGraph.hpp  VarGraph.tpp
include/ReverseOnForward/: Var.hpp
include/myAD/Forward/: Var.hpp  Var.tpp
include/myAD/Reverse/: Var.hpp  Var.tpp  VarGraph.hpp  VarGraph.tpp
include/myAD/ReverseOnForward/: Var.hpp  Var.tpp
